packages/lodepng_flutter/lib/lodepng_flutter_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/lodepng_flutter.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class LodepngFlutterBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LodepngFlutterBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LodepngFlutterBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  late final ffi.Pointer<ffi.Pointer<ffi.Char>> _LODEPNG_VERSION_STRING =
      _lookup<ffi.Pointer<ffi.Char>>('LODEPNG_VERSION_STRING');

  ffi.Pointer<ffi.Char> get LODEPNG_VERSION_STRING =>
      _LODEPNG_VERSION_STRING.value;

  set LODEPNG_VERSION_STRING(ffi.Pointer<ffi.Char> value) =>
      _LODEPNG_VERSION_STRING.value = value;

  /// Converts PNG data in memory to raw pixel data.
  /// out: Output parameter. Pointer to buffer that will contain the raw pixel data.
  /// After decoding, its size is w * h * (bytes per pixel) bytes larger than
  /// initially. Bytes per pixel depends on colortype and bitdepth.
  /// Must be freed after usage with free(*out).
  /// Note: for 16-bit per channel colors, uses big endian format like PNG does.
  /// w: Output parameter. Pointer to width of pixel data.
  /// h: Output parameter. Pointer to height of pixel data.
  /// in: Memory buffer with the PNG file.
  /// insize: size of the in buffer.
  /// colortype: the desired color type for the raw output image. See explanation on PNG color types.
  /// bitdepth: the desired bit depth for the raw output image. See explanation on PNG color types.
  /// Return value: LodePNG error code (0 means no error).
  int lodepng_decode_memory(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.UnsignedInt> w,
    ffi.Pointer<ffi.UnsignedInt> h,
    ffi.Pointer<ffi.UnsignedChar> in1,
    int insize,
    int colortype,
    int bitdepth,
  ) {
    return _lodepng_decode_memory(
      out,
      w,
      h,
      in1,
      insize,
      colortype,
      bitdepth,
    );
  }

  late final _lodepng_decode_memoryPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size,
              ffi.Int32,
              ffi.UnsignedInt)>>('lodepng_decode_memory');
  late final _lodepng_decode_memory = _lodepng_decode_memoryPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<ffi.UnsignedChar>,
          int,
          int,
          int)>();

  /// Same as lodepng_decode_memory, but always decodes to 32-bit RGBA raw image
  int lodepng_decode32(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.UnsignedInt> w,
    ffi.Pointer<ffi.UnsignedInt> h,
    ffi.Pointer<ffi.UnsignedChar> in1,
    int insize,
  ) {
    return _lodepng_decode32(
      out,
      w,
      h,
      in1,
      insize,
    );
  }

  late final _lodepng_decode32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size)>>('lodepng_decode32');
  late final _lodepng_decode32 = _lodepng_decode32Ptr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<ffi.UnsignedChar>,
          int)>();

  /// Same as lodepng_decode_memory, but always decodes to 24-bit RGB raw image
  int lodepng_decode24(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.UnsignedInt> w,
    ffi.Pointer<ffi.UnsignedInt> h,
    ffi.Pointer<ffi.UnsignedChar> in1,
    int insize,
  ) {
    return _lodepng_decode24(
      out,
      w,
      h,
      in1,
      insize,
    );
  }

  late final _lodepng_decode24Ptr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size)>>('lodepng_decode24');
  late final _lodepng_decode24 = _lodepng_decode24Ptr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<ffi.UnsignedChar>,
          int)>();

  /// Load PNG from disk, from file with given name.
  /// Same as the other decode functions, but instead takes a filename as input.
  ///
  /// NOTE: Wide-character filenames are not supported, you can use an external method
  /// to handle such files and decode in-memory.
  int lodepng_decode_file(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.UnsignedInt> w,
    ffi.Pointer<ffi.UnsignedInt> h,
    ffi.Pointer<ffi.Char> filename,
    int colortype,
    int bitdepth,
  ) {
    return _lodepng_decode_file(
      out,
      w,
      h,
      filename,
      colortype,
      bitdepth,
    );
  }

  late final _lodepng_decode_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              ffi.UnsignedInt)>>('lodepng_decode_file');
  late final _lodepng_decode_file = _lodepng_decode_filePtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<ffi.Char>,
          int,
          int)>();

  /// Same as lodepng_decode_file, but always decodes to 32-bit RGBA raw image.
  ///
  /// NOTE: Wide-character filenames are not supported, you can use an external method
  /// to handle such files and decode in-memory.
  int lodepng_decode32_file(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.UnsignedInt> w,
    ffi.Pointer<ffi.UnsignedInt> h,
    ffi.Pointer<ffi.Char> filename,
  ) {
    return _lodepng_decode32_file(
      out,
      w,
      h,
      filename,
    );
  }

  late final _lodepng_decode32_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.Char>)>>('lodepng_decode32_file');
  late final _lodepng_decode32_file = _lodepng_decode32_filePtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<ffi.Char>)>();

  /// Same as lodepng_decode_file, but always decodes to 24-bit RGB raw image.
  ///
  /// NOTE: Wide-character filenames are not supported, you can use an external method
  /// to handle such files and decode in-memory.
  int lodepng_decode24_file(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.UnsignedInt> w,
    ffi.Pointer<ffi.UnsignedInt> h,
    ffi.Pointer<ffi.Char> filename,
  ) {
    return _lodepng_decode24_file(
      out,
      w,
      h,
      filename,
    );
  }

  late final _lodepng_decode24_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.Char>)>>('lodepng_decode24_file');
  late final _lodepng_decode24_file = _lodepng_decode24_filePtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<ffi.Char>)>();

  /// Converts raw pixel data into a PNG image in memory. The colortype and bitdepth
  /// of the output PNG image cannot be chosen, they are automatically determined
  /// by the colortype, bitdepth and content of the input pixel data.
  /// Note: for 16-bit per channel colors, needs big endian format like PNG does.
  /// out: Output parameter. Pointer to buffer that will contain the PNG image data.
  /// Must be freed after usage with free(*out).
  /// outsize: Output parameter. Pointer to the size in bytes of the out buffer.
  /// image: The raw pixel data to encode. The size of this buffer should be
  /// w * h * (bytes per pixel), bytes per pixel depends on colortype and bitdepth.
  /// w: width of the raw pixel data in pixels.
  /// h: height of the raw pixel data in pixels.
  /// colortype: the color type of the raw input image. See explanation on PNG color types.
  /// bitdepth: the bit depth of the raw input image. See explanation on PNG color types.
  /// Return value: LodePNG error code (0 means no error).
  int lodepng_encode_memory(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.Size> outsize,
    ffi.Pointer<ffi.UnsignedChar> image,
    int w,
    int h,
    int colortype,
    int bitdepth,
  ) {
    return _lodepng_encode_memory(
      out,
      outsize,
      image,
      w,
      h,
      colortype,
      bitdepth,
    );
  }

  late final _lodepng_encode_memoryPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.Size>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.UnsignedInt,
              ffi.UnsignedInt,
              ffi.Int32,
              ffi.UnsignedInt)>>('lodepng_encode_memory');
  late final _lodepng_encode_memory = _lodepng_encode_memoryPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.Size>,
          ffi.Pointer<ffi.UnsignedChar>,
          int,
          int,
          int,
          int)>();

  /// Same as lodepng_encode_memory, but always encodes from 32-bit RGBA raw image.
  int lodepng_encode32(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.Size> outsize,
    ffi.Pointer<ffi.UnsignedChar> image,
    int w,
    int h,
  ) {
    return _lodepng_encode32(
      out,
      outsize,
      image,
      w,
      h,
    );
  }

  late final _lodepng_encode32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.Size>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.UnsignedInt,
              ffi.UnsignedInt)>>('lodepng_encode32');
  late final _lodepng_encode32 = _lodepng_encode32Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.Size>, ffi.Pointer<ffi.UnsignedChar>, int, int)>();
